fix(toolbars): fix toolbars alignment

--- a/src/app/shared/styles/app/flex.scss
+++ b/src/app/shared/styles/app/flex.scss
@@ -14,6 +14,9 @@
   &.justify-center {
     justify-content: center;
   }
+  &.justify-end {
+    justify-content: flex-end;
+  }
   &.wrap {
     flex-wrap: wrap;
   }
